--- a/shop.html
+++ b/shop.html
@@ -4,50 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - Catégories</title>
+    <title>À propos de nous</title>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="shop.css">
 </head>
 
 <body>
 
-    <!-- En-tête -->
-    <header>
+     <!-- En-tête -->
+     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="accueil.html">Home</a></li>
-                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="aboutus.html">À propos</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="actualites.html">Actuality</a></li>
-                <li><a href="conseils.html">Advices</a></li>
-                <!-- on mettra panier.html plus tard-->
-                <li><a href="fakepanier.html">Mon panier</a></li> 
-                <li><a href="connection.html">Connexion</a></li>
+                <li><a href="project.html">Services</a></li>
+                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li>
+                    <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
+                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
+                </li>
             </ul>
         </nav>
     </header>
-
     <!-- Conteneur des catégories de la boutique -->
     <main>
         <section class="categories-container">
             <!-- Catégorie : Plant Soil -->
             <a href="cat1.html" class="category-card">
-                <img src="terre.jpg" alt="Plant Soil">
+                <img src="terre.png" alt="Plant Soil">
                 <div class="category-title">Plant Soil</div>
             </a>
 
-            <!-- Catégorie : Trimming Tools -->
+            <!-- Catégorie : Garden Tools -->
             <a href="cat2.html" class="category-card">
-                <img src="tools.webp" alt="Trimming Tools">
-                <div class="category-title">Trimming Tools</div>
+                <img src="outils.jpg" alt="Garden tools">
+                <div class="category-title">Garden's Tools</div>
             </a>
 
             <!-- Catégorie : Loppers -->
             <a href="cat3.html" class="category-card">
-                <img src="rabot.webp" alt="Loppers">
+                <img src="tronco.jpg" alt="Loppers">
                 <div class="category-title">Loppers</div>
             </a>
         </section>
@@ -57,7 +57,18 @@
     <footer>
         <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
     </footer>
+    <script src="theme.js"></script>
 
+       <!-- Bouton de changement de thème -->
+       <div id="theme-toggle">
+        <button id="theme-toggle-btn" title="Changer le thème">
+            <i class="bx bx-sun"></i>
+        </button>
+    </div>
+    
+    </body>
+    </html>
+    
 </body>
 
 </html>
