--- a/test.html
+++ b/test.html
@@ -3,46 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modifier mes informations</title>
-    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="modif.css"> <!-- Inclure votre fichier CSS -->
+    <title>Modifier Mes Informations</title>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="modif.css">
 </head>
 <body>
-    <!-- Barre de navigation -->
-    <header class="top-bar">
+    <!-- En-tête -->
+    <header>
         <div class="logo">
-            <img src="logo.png" alt="Logo" class="logo-image">
+            <img src="logo.png" alt="Logo">
         </div>
+        <nav>
+            <ul class="nav-menu">
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="aboutus.html">À propos</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="project.html">Services</a></li>
+                <li><a href="actualites.html">Les Infos-Vertes</a></li>
+                <li>
+                    <a href="cart.html"><i class="bx bx-cart"></i></a>
+                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Contenu principal -->
-    <main class="main-content">
-        <section class="form-section">
-            <div class="title-container">
-                <!-- Flèche de retour -->
-                <a href="myaccount.html" class="undo-link">
-                    <i class="bx bx-undo"></i>
-                </a>
-                <h2>Modifier mes Informations</h2>
+    <main>
+        <section id="modif-section">
+            <div class="modif-header">
+                <h1>Modifier mes informations personnelles</h1>
             </div>
-            
+
+            <!-- Formulaire de modification -->
             <form id="modif-form">
-                <label for="username">Nom :</label>
+                <label for="username">Nom d'utilisateur :</label>
                 <input type="text" id="username" name="username" required>
 
                 <label for="email">Email :</label>
                 <input type="email" id="email" name="email" required>
 
-                <button type="submit" class="submit-btn"> Valider la modification</button>
+                <button type="submit">Mettre à jour</button>
             </form>
+
             <p id="message" class="message"></p>
         </section>
     </main>
+
+    <!-- Pied de page -->
     <footer>
         <p>&copy; 2024 L'Arbre Envie - Tous droits réservés</p>
     </footer>
-    
-   
+
     <script>
         document.addEventListener("DOMContentLoaded", () => { 
             // Vérifie si l'utilisateur est connecté
@@ -105,14 +117,5 @@
             }
         });
     </script>
-
-    <script src="theme.js"></script>
-
-    <!-- Bouton de changement de thème -->
-    <div id="theme-toggle">
-        <button id="theme-toggle-btn" title="Changer le thème">
-            <i class="bx bx-sun"></i>
-        </button>
-    </div>
 </body>
 </html>
