--- a/modif.html
+++ b/modif.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modifier mes informations</title>
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="modif.css"> <!-- Inclure votre fichier CSS -->
+    <link rel="stylesheet" href="modif.css"> 
 </head>
 <body>
     <!-- Barre de navigation -->
