--- a/test.html
+++ b/test.html
@@ -1,52 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modifier Mes Informations</title>
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="modif.css">
+    <title>Mot de Passe Oublié</title>
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="mdpchange.css">
 </head>
-<body>
-    <!-- En-tête -->
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="Logo">
-        </div>
-        <nav>
-            <ul class="nav-menu">
-                <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="aboutus.html">À propos</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="project.html">Services</a></li>
-                <li><a href="actualites.html">Les Infos-Vertes</a></li>
-                <li>
-                    <a href="cart.html"><i class="bx bx-cart"></i></a>
-                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
+<body>
     <!-- Contenu principal -->
     <main>
-        <section id="modif-section">
-            <div class="modif-header">
-                <h1>Modifier mes informations personnelles</h1>
+        <section class="login-container">
+            <!-- Logo et flèche de retour -->
+            <div class="logo-container">
+                <!-- Bouton de retour -->
+                <a href="myaccount.html" title="Retour à l'accueil" class="back-button">
+                    <i class="bx bx-undo"></i>
+                </a>
+                <!-- Logo -->
+                <div class="logo">
+                    <img src="logo.png" alt="Logo de L'Arbre Envie">
+                </div>
             </div>
 
-            <!-- Formulaire de modification -->
-            <form id="modif-form">
-                <label for="username">Nom d'utilisateur :</label>
-                <input type="text" id="username" name="username" required>
+            <!-- Titre -->
+            <h1>Changer mon mot de passe </h1>
 
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
-
-                <button type="submit">Mettre à jour</button>
+            <!-- Formulaire -->
+            <form id="change-password-form">
+                <label for="email">Adresse e-mail :</label>
+                <input type="email" id="email" placeholder="Entrez votre adresse e-mail" required>
+                <button type="submit" class="btn">Envoyer</button>
             </form>
 
-            <p id="message" class="message"></p>
+            <!-- Lien de retour -->
+            <p class="additional-links">Vous ne voulez plus changer votre mot de passe ? <a href="myaccount.html">Retour à mon compte</a></p>
         </section>
     </main>
 
@@ -55,67 +45,19 @@
         <p>&copy; 2024 L'Arbre Envie - Tous droits réservés</p>
     </footer>
 
+    <!-- Script pour le formulaire -->
     <script>
-        document.addEventListener("DOMContentLoaded", () => { 
-            // Vérifie si l'utilisateur est connecté
-            if (localStorage.getItem("isLoggedIn") !== "true") {
-                window.location.href = "connection.html"; // Redirige si non connecté
-            } else {
-                const userId = localStorage.getItem("userId"); // Récupère l'ID utilisateur
-                fetchUserData(userId); // Appel de la fonction pour récupérer les données de cet utilisateur
-            }
-        });
-
-        // Fonction pour récupérer les données de l'utilisateur connecté
-        async function fetchUserData(userId) {
-            try {
-                const response = await fetch(`http://localhost:3000/api/users/${userId}`);
-                if (response.ok) {
-                    const user = await response.json();
-                    document.getElementById("username").value = user.username || "";
-                    document.getElementById("email").value = user.email || "";
-                } else {
-                    console.error('Erreur lors de la récupération des données de l\'utilisateur');
-                }
-            } catch (err) {
-                console.error('Erreur de connexion:', err);
-            }
-        }
-
-        // Fonction pour soumettre le formulaire de modification
-        document.getElementById("modif-form").addEventListener("submit", async (e) => {
+        document.getElementById("change-password-form").addEventListener("submit", function (e) {
             e.preventDefault();
-
-            const userId = localStorage.getItem("userId");
-            const username = document.getElementById("username").value;
             const email = document.getElementById("email").value;
-
-            try {
-                const response = await fetch(`http://localhost:3000/api/users/profile/${userId}`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        username: username,
-                        email: email
-                    })
-                });
-
-                const messageElement = document.getElementById("message");
-                if (response.ok) {
-                    messageElement.textContent = "Informations mises à jour avec succès!";
-                    messageElement.style.color = "green";
-                } else {
-                    const data = await response.json();
-                    messageElement.textContent = data.message || "Erreur lors de la mise à jour.";
-                    messageElement.style.color = "red";
-                }
-            } catch (err) {
-                console.error('Erreur de connexion:', err);
-                document.getElementById("message").textContent = "Une erreur est survenue.";
-            }
+            alert(`Un email de réinitialisation a été envoyé à : ${email}`);
+            // Logique pour envoyer la requête (simulée ici)
+            window.location.href = "connection.html";
         });
     </script>
+
+    <!-- Script pour le thème -->
+    <script src="theme.js"></script>
 </body>
+
 </html>
